name:                anonymous-records-benchmark
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable hlist-bench
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >=4.9 && <4.10
                     , criterion >=1.2 && <1.3
                     , template-haskell >=2.11 && <2.12
                     , deepseq >=1.4 && <1.5
                     , lens >=4.15 && <4.16
                     , mtl >=2.2 && <2.3
                     , tagged >=0.8 && <0.9
                     , hashable >=1.2 && <1.3
                     , unordered-containers >=0.2 && <0.3
                     , containers >=0.5 && <0.6
                     , ghc-prim

                     -- libraries
                     , CTRex >=0.6 && <0.7
                     , vinyl >=0.5 && <0.6
                     , data-diverse
                     , superrecord
                     , records
                     , labels
                     , bookkeeper
                     , extensible
                     , rawr

                    -- Debugging
                     , dump-core
  -- hs-source-dirs:
  ghc-options: -DNN=2 -ddump-splices -O2 -fplugin=DumpCore -fplugin-opt DumpCore:core-html
  default-language:    Haskell2010
